recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:11: error: ')' expected but ';' found.
    tree(steps-1;shrink*length,angle,shrink)
                ^Tree:11: error: ';' expected but ',' found.
    tree(steps-1;shrink*length,angle,shrink)
                              ^